# github_actions_test

./: .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: github-actions-demo.yaml
